# nodedb-studio

./: .gitignore  AGENTS.md  Cargo.toml  README.md
nodedb-studio/: Cargo.toml
nodedb-studio/assets/: styles.css
nodedb-studio/src/: app.rs  main.rs  routes.rs
nodedb-studio/src/components/: async_view.rs  command_palette.rs  mod.rs  modal.rs  rail.rs  statusbar.rs  topbar.rs
nodedb-studio/src/components/popovers/: avatar_popover.rs  connection_popover.rs  database_popover.rs  mod.rs  notification_popover.rs
nodedb-studio/src/data/: mock.rs  mod.rs
nodedb-studio/src/modals/: mod.rs  new_connection.rs  preferences.rs
nodedb-studio/src/models/: collection.rs  database.rs  mod.rs  notification.rs
nodedb-studio/src/services/: async_state.rs  connection_service.rs  error.rs  mod.rs  nodedb_service.rs
nodedb-studio/src/state/: connection.rs  connections_registry.rs  mod.rs  notifications.rs  preferences.rs  ui.rs
nodedb-studio/src/views/: connection_manager.rs  console.rs  designer.rs  fts_inspector.rs  mod.rs  query.rs  spatial_view.rs  studio_shell.rs  sync.rs  timeseries_dashboard.rs  vector_space.rs
nodedb-studio/src/views/admin/: audit.rs  mod.rs  nodes.rs  raft.rs  rbac.rs  shards.rs
nodedb-studio/src/views/explorer/: mod.rs  sidebar.rs
nodedb-studio/src/views/explorer/viewers/: document.rs  fts.rs  graph.rs  kv.rs  mod.rs  spatial.rs  strict.rs  timeseries.rs  vector.rs
nodedb-studio/src/views/graph_explorer/: mod.rs
nodedb-studio/src/views/streams/: cdc.rs  cron.rs  landing.rs  mod.rs  notify.rs
