[workspace]
members = [
  "nodedb-studio",
]
resolver = "2"

[workspace.package]
version = "0.0.0-beta.1"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/NodeDB-Lab/nodedb-studio"
homepage = "https://nodedb.dev"

[workspace.dependencies]
# Internal. Local path to the NodeDB workspace checkout (../nodedb). The
# published v0.0.0 crates are broken placeholders, so the skeleton builds
# against the real local crates instead. Path is machine-specific; adjust if
# your NodeDB checkout lives elsewhere.
nodedb-client = { path = "../nodedb/nodedb-client" }
nodedb-types = { path = "../nodedb/nodedb-types" }
# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# UI. The `router` feature re-exports dioxus-router through dioxus::prelude,
# which is the 0.6 idiom (CLAUDE.md predates this and names dioxus-router
# directly; same crate, just gated behind the feature now). Desktop-only for
# the skeleton.
dioxus = { version = "0.6", features = ["desktop", "router"] }

# Serialization. Kept for derive on models/preferences; no runtime parsing
# happens in the skeleton (mock data is hardcoded Rust).
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5"

# Error handling / diagnostics
thiserror = "2.0"
tracing = "0.1"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.release]
lto = "thin"
strip = true
