[workspace]
members = [
  "nodedb-studio",
]
resolver = "2"

[workspace.package]
version = "0.0.0-beta.1"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/NodeDB-Lab/nodedb-studio"
homepage = "https://nodedb.dev"

[workspace.dependencies]
# Internal NodeDB crates.
nodedb-client = { version = "0.3.0", features = ["native"] }
nodedb-types = "0.3.0"
# Async
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# UI. The `router` feature re-exports the router through dioxus::prelude.
# Desktop-only for the skeleton.
dioxus = { version = "0.7", features = ["desktop", "router"] }

# Serialization. Kept for derive on models/preferences; no runtime parsing
# happens in the skeleton (mock data is hardcoded Rust).
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.5"

# Error handling / diagnostics
thiserror = "2.0"
tracing = "0.1"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.release]
lto = "thin"
strip = true
